--- a/src/puzzles/day_04/Cargo.toml
+++ b/src/puzzles/day_04/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 utils = { path = "../../utils" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
+regex = "1.5"
